feat: pdf generator v1.1.19, language support, watermark, EN translation
